# AIAgent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
bugdoctor/: __init__.py  __main__.py  app.py  config.example.yaml  config.py  project_map.py
bugdoctor/agent/: loop.py
bugdoctor/chat/: session.py
bugdoctor/context/: __init__.py  compact.py  tool_budget.py
bugdoctor/conversation/: manager.py  models.py
bugdoctor/llm/: client.py  events.py  serializer.py
bugdoctor/mcp/: __init__.py  client.py  manager.py  tool_wrapper.py
bugdoctor/memory/: session.py  store.py
bugdoctor/prompts/: sections.py  system.py
bugdoctor/skills/: __init__.py  loader.py  manager.py  parser.py  paths.py
bugdoctor/tools/: base.py  edit_file.py  factory.py  get_environment.py  glob_files.py  grep_code.py  load_skill.py  read_file.py  read_tracker.py  run_command.py  sandbox.py  write_file.py
tests/: run_agent_tests.py
