[project]
name = "bugdoctor"
version = "0.1.0"
description = "Hypothesis-driven bug diagnosis agent (Python + Java)"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "mcp>=1.0",
]

[project.scripts]
bugdoctor = "bugdoctor.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bugdoctor"]
